[project]
name = "developer-toolbox"
version = "0.1.0"
description = "开发者日常工具箱 CLI (dbx)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dbx = "dbx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbx"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"

# 项目级 index，覆盖任何用户级 uv 配置 (例如本地的 USTC 镜像)。
# 这样 uv.lock 里写入的是 pypi.org 的 URL，CI / 其它贡献者都能直接拉到。
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
